--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Reset CSS */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body,
@@ -10,24 +10,45 @@ p,
 ul,
 li,
 a {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Nunito', Helvetica, Arial, sans-serif;
-    color: #222222;
+  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  color: #222222;
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+  color: inherit;
 }
 
 img {
-    display: block;
-    max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
+
+/* Superinfo */
+.superinfo-bg {
+  background-color: #122ab2;
+  color: #ffffff;
+}
+
+.superinfo {
+  display: flex;
+  max-width: 960px;
+  margin: 0 auto;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.superinfo p,
+.superinfo a {
+    margin: 0 10px 10px;
+}   
