--- a/css/style.css
+++ b/css/style.css
@@ -50,5 +50,47 @@ img {
 
 .superinfo p,
 .superinfo a {
-    margin: 0 10px 10px;
-}   
+  margin: 0 10px 10px;
+}
+
+/* Menu */
+
+.menu-bg {
+  background-color: #2c70ff;
+}
+
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 15px 0;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.menu-logo a {
+  font-size: 2.25em;
+  font-weight: bold;
+  margin: 0 10px;
+}
+
+.menu-nav ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-nav a {
+  font-size: 1.25em;
+  display: block;
+  padding: 5px 10px;
+  margin: 0 5px;
+  border-radius: 5px;
+  transition: 200ms;
+}
+
+.menu-nav a:hover {
+  background-color: #122ab2;
+  color: #2c70ff;
+}
