--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,13 @@ img {
   background-color: #122ab2;
   color: #2c70ff;
 }
+
+/* Introducao */
+
+.introducao {
+  font-size: 3em;
+  line-height: 1;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 60px 10px;
+}
