--- a/css/style.css
+++ b/css/style.css
@@ -371,3 +371,17 @@ img {
   cursor: pointer;
   padding: 15px 10px;
 }
+
+/* Footer */
+.footer {
+  display: flex;
+  height: 200px;
+  background: #2c70ff;
+  align-items: center;
+}
+
+.footer p {
+  text-align: center;
+  font-size: 2.25em;
+  color: #122ab2;
+}
