--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,12 @@ img {
   padding: 15px 10px;
 }
 
+@media (max-width: 600px) {
+  .newsletter-form button {
+    font-size: 1.5em;
+  }
+}
+
 /* Footer */
 .footer {
   display: flex;
