--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ img {
 /* Newsletter */
 .newsletter {
   background: #f7f7f7;
-  padding: calc((100% - 960px) / 2);
+  padding: 60px calc((100% - 960px) / 2);
   display: flex;
   flex-wrap: wrap;
 }
